Updated AMOS Pro X

--- a/AMOSPro.uae.1
+++ b/AMOSPro.uae.1
@@ -71,9 +71,9 @@ comp_trustnaddr=direct
 comp_nf=false
 comp_constjump=true
 comp_flushmode=hard
-compfpu=false
+compfpu=true
 comp_catchdetect=true
-cachesize=8192
+cachesize=16384
 joyport0=mouse
 joyport0autofire=none
 joyportfriendlyname0=Windows mouse
@@ -90,17 +90,17 @@ parallel_autoflush=5
 clipboard_sharing=true
 gfx_display=0
 gfx_display_rtg=0
-gfx_framerate=10
-gfx_width=1360
+gfx_framerate=1
+gfx_width=1280
 gfx_height=768
 gfx_top_windowed=538
-gfx_left_windowed=254
-gfx_width_windowed=1360
+gfx_left_windowed=257
+gfx_width_windowed=1280
 gfx_height_windowed=768
-gfx_width_fullscreen=1360
+gfx_width_fullscreen=1280
 gfx_height_fullscreen=768
 gfx_refreshrate=0
-gfx_autoresolution=1
+gfx_autoresolution=0
 gfx_autoresolution_vga=true
 gfx_backbuffers=2
 gfx_backbuffers_rtg=1
@@ -127,32 +127,34 @@ immediate_blits=true
 ntsc=false
 genlock=false
 chipset=aga
-chipset_refreshrate=50.000000
+chipset_refreshrate=49.920410
 collision_level=playfields
 chipset_compatible=A1200
 rtc=MSM6242B
 ksmirror_a8=true
 pcmcia=true
 ide=a600/a1200
-fastmem_size=8
+fastmem_size_k=256
 debugmem_start=0x0
 debugmem_size=0
 mem25bit_size=0
 a3000mem_size=0
 mbresmem_size=0
-z3mem_size=0
-z3mem_start=0x10000000
-bogomem_size=0
+z3mem_size=1024
+z3mem_start=0x40000000
+bogomem_size=7
 gfxcard_hardware_vblank=false
 gfxcard_hardware_sprite=false
 gfxcard_multithread=false
-gfxcard_size=1024
+gfxcard_size=4
 gfxcard_type=ZorroIII
-chipmem_size=4
+chipmem_size=16
+megachipmem_size=1024
 cpu_speed=max
 cpu_throttle=0.0
-cpu_type=68040
-cpu_model=68040
+cpu_type=68020/68881
+cpu_model=68020
+fpu_model=68882
 cpu_compatible=false
 cpu_24bit_addressing=false
 cpu_data_cache=false
@@ -249,7 +251,6 @@ input.1.keyboard.19.empty=true
 input.1.internal.0.friendlyname=Internal events
 input.1.internal.0.name=INTERNALEVENTS1
 input.1.internal.0.empty=true
-input.1.internal.0.disabled=false
 input.2.joystick.0.empty=true
 input.2.joystick.1.empty=true
 input.2.joystick.2.empty=true
@@ -394,9 +395,6 @@ input.3.keyboard.19.empty=true
 input.3.internal.0.friendlyname=Internal events
 input.3.internal.0.name=INTERNALEVENTS1
 input.3.internal.0.empty=true
-input.4.mouse.0.friendlyname=Windows mouse
-input.4.mouse.0.name=WINMOUSE1
-input.4.mouse.0.custom=true
 input.4.keyboard.0.friendlyname=WinUAE keyboard
 input.4.keyboard.0.name=NULLKEYBOARD
 input.4.keyboard.0.custom=true
