--- a/AMOSPro.uae.2
+++ b/AMOSPro.uae.2
@@ -90,11 +90,11 @@ parallel_autoflush=5
 clipboard_sharing=true
 gfx_display=0
 gfx_display_rtg=0
-gfx_framerate=1
+gfx_framerate=10
 gfx_width=1360
 gfx_height=768
-gfx_top_windowed=450
-gfx_left_windowed=242
+gfx_top_windowed=538
+gfx_left_windowed=254
 gfx_width_windowed=1360
 gfx_height_windowed=768
 gfx_width_fullscreen=1360
@@ -109,7 +109,7 @@ gfx_vsyncmode=normal
 gfx_vsync_picasso=false
 gfx_vsyncmode_picasso=normal
 gfx_lores=false
-gfx_resolution=superhires
+gfx_resolution=hires
 gfx_lores_mode=normal
 gfx_flickerfixer=false
 gfx_linemode=double
@@ -127,7 +127,7 @@ immediate_blits=true
 ntsc=false
 genlock=false
 chipset=aga
-chipset_refreshrate=49.920410
+chipset_refreshrate=50.000000
 collision_level=playfields
 chipset_compatible=A1200
 rtc=MSM6242B
@@ -141,12 +141,12 @@ mem25bit_size=0
 a3000mem_size=0
 mbresmem_size=0
 z3mem_size=0
-z3mem_start=0x40000000
+z3mem_start=0x10000000
 bogomem_size=0
 gfxcard_hardware_vblank=false
 gfxcard_hardware_sprite=false
 gfxcard_multithread=false
-gfxcard_size=4
+gfxcard_size=1024
 gfxcard_type=ZorroIII
 chipmem_size=4
 cpu_speed=max
